--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ buildscript {
         }
     }
     ext {
-        projectVersion = '2.14.0-SNAPSHOT'
+        projectVersion = '2.14.1.RELEASE'
 
         // https://github.com/grpc/grpc-java/releases
         grpcVersion = '1.51.0'
