--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,4 @@
-rootProject.name = 'grpc-spring-boot-starter'
+//rootProject.name = 'grpc-spring-boot-starter'
 
 include "grpc-common-spring-boot"
 include "grpc-client-spring-boot-autoconfigure"
